# mb-stash

./: ADR.md  CLAUDE.md  README.md  justfile  pyproject.toml
raycast/: package-lock.json  package.json  raycast-env.d.ts
raycast/src/: lock-stash.tsx  stash.tsx
raycast/src/lib/: daemon.ts
src/mb_stash/: __init__.py  app_context.py  cli.py  clipboard.py  config.py  crypto.py  log.py  output.py  stash.py
src/mb_stash/commands/: __init__.py  add.py  change_password.py  daemon.py  delete.py  get.py  health.py  init.py  list.py  lock.py  rename.py  stop.py  unlock.py
src/mb_stash/daemon/: __init__.py  client.py  process.py  protocol.py  server.py
tests/mb_stash/: test_config.py  test_crypto.py  test_stash.py
tests/mb_stash/daemon/: test_protocol.py
